<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_status_bar">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="persistent_notification"
            app:summary="@string/pref_persistent_notification_summary"
            app:title="@string/pref_persistent_notification" />

        <!-- Both of these only mean anything while the notification exists. -->
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="persistent_notification"
            app:key="RadioChosenBlack"
            app:summary="@string/pref_dark_icon_summary"
            app:title="@string/pref_dark_icon" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:dependency="persistent_notification"
            app:key="AutoStart"
            app:summary="@string/pref_auto_start_summary"
            app:title="@string/pref_auto_start" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_updates">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/update_rate_entries"
            app:entryValues="@array/update_rate_values"
            app:key="update_rate_seconds"
            app:title="@string/pref_update_rate" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_appearance">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="dynamic_colour"
            app:summary="@string/pref_dynamic_colour_summary"
            app:title="@string/pref_dynamic_colour" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_app">

        <Preference
            app:key="kill_app"
            app:summary="@string/pref_kill_app_summary"
            app:title="@string/pref_kill_app" />

    </PreferenceCategory>

</PreferenceScreen>
